vault/vault-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vault-https
  namespace: vault
spec:
  parentRefs:
    - name: kgateway-gw
      namespace: kgateway-system
      sectionName: https
  hostnames:
    - "vault.helldiverslab.uk"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: vault
          port: 8200
          weight: 100
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vault-http-redirect
  namespace: vault
spec:
  parentRefs:
    - name: kgateway-gw
      namespace: kgateway-system
      sectionName: http
  hostnames:
    - "vault.helldiverslab.uk"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
